--- a/ZOOMingUsingCV2.ipynb
+++ b/ZOOMingUsingCV2.ipynb
@@ -2,6 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "4594cf9a-8060-44b2-ab53-9af73bf82857",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: opencv-python in c:\\users\\jaya verma\\anaconda3\\lib\\site-packages (4.9.0.80)\n",
+      "Requirement already satisfied: numpy in c:\\users\\jaya verma\\anaconda3\\lib\\site-packages (1.26.4)\n",
+      "Requirement already satisfied: cvzone in c:\\users\\jaya verma\\anaconda3\\lib\\site-packages (1.6.1)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install opencv-python numpy cvzone"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "9a7427a4-8df5-4936-93cf-5007b62ad833",
    "metadata": {},
